# CMake-Tutorial

./: .gitignore  README.md
Step1/: CMakeLists.txt  tutorial.cpp
Step2/: CMakeLists.txt  tutorial.cpp
Step2/MathFunctions/: MathFunctions.h  mysqrt.cpp
Step3/: CMakeLists.txt
